--- a/gbobstatusbot/gbobstatusbot.csproj
+++ b/gbobstatusbot/gbobstatusbot.csproj
@@ -29,4 +29,8 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="LICENSE" />
+    <None Include="README.md" />
+  </ItemGroup>
 </Project>
