starting reddit classes

--- a/gbobstatusbot/gbobstatusbot.Reddit/gbobstatusbot.Reddit.csproj
+++ b/gbobstatusbot/gbobstatusbot.Reddit/gbobstatusbot.Reddit.csproj
@@ -37,10 +37,11 @@
     <Reference Include="RedditSharp">
       <HintPath>..\..\packages\RedditSharp.1.0.14\lib\RedditSharp.dll</HintPath>
     </Reference>
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sidebar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
