adding unit test for CurrentText()

--- a/gbobstatusbot/gbobstatusbot.Reddit.Tests/gbobstatusbot.Reddit.Tests.csproj
+++ b/gbobstatusbot/gbobstatusbot.Reddit.Tests/gbobstatusbot.Reddit.Tests.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="nunit.framework" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Integration Tests\Test.cs" />
