renaming unit test file

--- a/gbobstatusbot/gbobstatusbot.Reddit.Tests/gbobstatusbot.Reddit.Tests.csproj
+++ b/gbobstatusbot/gbobstatusbot.Reddit.Tests/gbobstatusbot.Reddit.Tests.csproj
@@ -32,7 +32,7 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Integration Tests\Test.cs" />
+    <Compile Include="Integration Tests\Sidebar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
